<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BuzzerSetupActivity">

    <TextView
        android:id="@+id/getPlayerNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFeatureSettings="smcp"
        android:text="@string/BuzzerScreen_ask_nb_players"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nb_player_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/nb_player_spinner"
        android:layout_width="248dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/nb_players"
        app:layout_constraintBottom_toTopOf="@+id/playerNames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getPlayerNumberText" />


    <Button
        android:id="@+id/nb_players_selected"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cg_blue"
        android:onClick="switchToGame"
        android:text="@string/proceed"
        android:textSize="20sp"
        android:visibility="visible"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerNames"
        app:layout_constraintVertical_bias="0.83" />

    <LinearLayout
        android:id="@+id/playerNames"
        android:layout_width="0dp"
        android:layout_height="183dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:noHistory="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nb_player_spinner">

        <EditText
            android:id="@+id/namePlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name of Player 1"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/namePlayer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name of Player 2"
            android:inputType="textPersonName"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/namePlayer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name of Player 3"
            android:inputType="textPersonName"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/namePlayer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name of Player 4"
            android:inputType="textPersonName"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/missingNameAlert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#AAAAAA"
        app:layout_constraintVertical_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerNames">

        <TextView
            android:id="@+id/missingNameMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/BuzzerScreen_player_missing"
            android:visibility="visible" />

        <Button
            android:id="@+id/missingNameOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BuzzerScreen_ok"
            android:backgroundTint="@color/cg_blue"
            android:visibility="visible" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>