<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/floral_white"
    tools:context=".activity.download.DownloadActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/download_returnToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/light_coral"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_revert"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/download_songName"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/download_songname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_indicator"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/download_downloadsong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/download_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_songName" />

    <Button
        android:id="@+id/download_to_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:onClick="switchToDeleteSongs"
        android:text="@string/download_to_manager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_downloadsong" />

    <TextView
        android:id="@+id/download_indicator"
        android:layout_width="313dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:text="@string/download_indicator"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>