...
    <string name="download_to_manager">Manage downloaded songs</string>
    <string name="delete_songs_description">CHOOSE A SONG TO DELETE:</string>
    <string name="delete_nothing_to_delete">YOU HAVE NO DOWNLOADED SONGS!</string>
    <string name="download_download_complete">Download completed!</string>
    <string name="download_try_another">Try another song!</string>
    <string name="download_already_done">Song already downloaded!</string>
    <string name="download_try_different">Try a different song!</string>
    <string name="download_unable_to_find">Unable to find song, please retry!</string>
    <string name="download_retry">Please retry!</string>
    <string name="download_permission_denied">Permission denied, cannot download!</string>
    <string name="download_already_downloading">A song is being downloaded, please be patient!</string>
    <string name="download_please_retry_later">Please retry later!</string>
    <string name="download_indicator">Please write the name of the song you desire to download in the following format:\n Song Name - Artist Name</string>
    <string name="download_manager_delete_success">Successfully remove song</string>
    <string name="download_manager_delete_fail">unable to remove song</string>

    <string name="Singleplayer">Single-player</string>
    <string name="Multiplayer">Multiplayer</string>
...
